invisible button fixed

--- a/src/components/UIelements/NavBar.css
+++ b/src/components/UIelements/NavBar.css
@@ -125,7 +125,7 @@
   transform: scale(1.1);
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
   .navbar {
     display: none;
   }
