--- a/src/components/UIelements/NavLinks.css
+++ b/src/components/UIelements/NavLinks.css
@@ -16,7 +16,7 @@
     position: relative;
     box-sizing: border-box;
     font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: center;
     color: #ffffff;
     opacity: .87;
