--- a/src/components/UIelements/menu-btn.css
+++ b/src/components/UIelements/menu-btn.css
@@ -34,7 +34,7 @@
     background: #CF6679;
   }
 
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 1300px) {
       .menu-btn{
           display: flex;
       }
