--- a/src/components/pages/contact.css
+++ b/src/components/pages/contact.css
@@ -30,6 +30,7 @@
   position: relative;
   background-color: #121212;
   border-radius: 0.5rem;
+  gap: 1rem;
   padding: 2rem;
   width: 50%;
   max-width: 45rem;
@@ -153,7 +154,7 @@ textarea {
   transition: all 1s;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
   .contact-wrapper {
     margin-left: 0;
   }
@@ -173,7 +174,7 @@ textarea {
   }
 
   .contact-form {
-    width: 95%;
+    width: 100%;
   }
 
   .contact-form input,
