--- a/src/components/pages/portfolio-card.css
+++ b/src/components/pages/portfolio-card.css
@@ -109,15 +109,15 @@ padding: 2rem;
   color: var(--violet);
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
   .image-container {
-    width: 50%;
+    width: 80%;
     height: auto;
   }
 
   .portfolio-card {
     flex-direction: column;
-    width: 80%;
+    width: 100%;
   }
 
   .portfolio-card-content {
