--- a/src/components/pages/portfolio.css
+++ b/src/components/pages/portfolio.css
@@ -24,7 +24,7 @@
   transition: all 1s ease-in-out;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
   .card-holder {
     width: 90%;
   }
