--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ body {
   height: 100%;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
 .content-container {
   width: 99%;
   margin-left: 0;
